--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -3,3 +3,5 @@ $primary-color: #4394dd;
 $secondary-color: #63bcf3;
 $grey-c-color: #cccccc;
 $grey-6-color: #666666;
+$cancel-color: #ec370f;
+$submit-color: #1b771b;
